--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,10 @@
 server {
     listen 80;
-    server_name localhost;
-
-    root /usr/share/nginx/html;
-    index index.html;
+    server_name amirtahanemati.ir www.amirtahanemati.ir;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
@@ -14,6 +12,5 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
